set01/problem09_compile_errors.txt
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set01\problem09.c: In function 'mysqrt':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set01\problem09.c:11:28: error: 'n' undeclared (first use in this function)
         float next=(pguess+n/pguess)/2;
                            ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set01\problem09.c:11:28: note: each undeclared identifier is reported only once for each function it appears in
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set01\problem09.c: In function 'main':
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set01\problem09.c:27:5: error: expected expression before '}' token
     }
     ^
c:\Users\asus\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-khushi-222003\set01\problem09.c:27:5: error: expected declaration or statement at end of input
